fix #832: Aligned events with posts content.

--- a/frontend/style/flavor/event.less
+++ b/frontend/style/flavor/event.less
@@ -4,6 +4,10 @@
 
 
 // Style label
+.posts-list .event .event-label {
+  margin-bottom: @line-height-computed / 4;
+}
+
 .posts-list .event .label-unread {
   background-color: @post-unread-label;
 
